# Tool-Coporate

./: .gitignore  DESIGN.md  LICENSE  README.md  pyproject.toml
conductor/: __init__.py  cli.py  config.py  cost.py  graph.py  mcp_server.py  memory.py  models.py  orchestrator.py  render.py  roles.py  router.py  session.py  tui.py  web.py  worktree.py
conductor/backends/: __init__.py  base.py  cli_backends.py  openai_compat.py
conductor/web_static/: app.js  index.html  style.css
examples/: example-task.md
tests/: test_advanced.py  test_loop.py  test_smoke.py  test_units.py  test_v04.py
